--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,10 @@ before_install:
 - sudo apt-get update -qq
 - sudo apt-get install -qq libelf-dev gcc-avr avr-libc freeglut3-dev
 
+install:
+- wget https://github.com/buserror/simavr/archive/v1.5.tar.gz
+- tar -xzvf v1.5.tar.gz
+- pushd v1.5 make && sudo make install RELEASE=1 && popd
+  
 language: c
 script: make -C src
