--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
 install:
 - wget https://github.com/buserror/simavr/archive/v1.5.tar.gz
 - tar -xzvf v1.5.tar.gz
-- pushd v1.5 make && sudo make install RELEASE=1 && popd
+- pushd v1.5 && make && sudo make install RELEASE=1 && popd
   
 language: c
 script: make -C src
