--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+language: c
+
 before_install:
 - sudo apt-get update -qq
 - sudo apt-get install -qq libelf-dev gcc-avr avr-libc freeglut3-dev
@@ -5,7 +7,6 @@ before_install:
 install:
 - wget https://github.com/buserror/simavr/archive/v1.5.tar.gz
 - tar -xzvf v1.5.tar.gz
-- pushd simavr-1.5 && make && sudo make install RELEASE=1 && popd
-  
-language: c
+- pushd simavr-1.5 && make && sudo make install && popd
+
 script: make -C src
