--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 install:
 - wget https://github.com/buserror/simavr/archive/v1.5.tar.gz
 - tar -xzvf v1.5.tar.gz
-- pushd simavr-1.5 && make && sudo make install RELEASE=1 && popd
+- pushd simavr-1.5 && make && sudo make install RELEASE=1 V=1 && popd
+- sudo ldconfig
 
 script: make -C src
