--- a/test/makefile
+++ b/test/makefile
@@ -3,7 +3,10 @@ MAIN=main
 PRJSRC=$(wildcard test_*.c)
 LIBS=-lrt -lm -lGL -lGLU -lglut -lelf -lsimavr -lpthread -ldl
 CC=gcc
-CFLAGS=-c -Wall -I. -I/usr/local/include/simavr/ -O2 -g
+CLIBSBUILD?=
+CFLAGSBUILD?=-O2 
+CFLAGS=-c -Wall -I. -I/usr/local/include/simavr/ -g
+CFLAGS+=${CFLAGSBUILD}
 OBJ=$(PRJSRC:.c=.o) main.o
 OBJECT_UNDER_TEST=$(PRJSRC:test_%.c=../src/%.o)
 
@@ -15,10 +18,10 @@ test: build
 	./build
 
 build: ${OBJ} ${MAIN}.o
-	$(CC) ${OBJ} ${OBJECT_UNDER_TEST} ${LIBS} -o $@
+	$(CC) ${OBJ} ${OBJECT_UNDER_TEST} ${LIBS} ${CLIBSBUILD} -o $@
 
 %.o: %.c
 	$(CC) ${CFLAGS} -o $@ $<
 
 clean:
-	rm -f ${MAIN} *.o
+	rm -f ${MAIN} *.o *.gcda *.gcno
