--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,24 @@ before_install:
 - sudo apt-get install -qq libelf-dev gcc-avr avr-libc freeglut3-dev
 
 install:
+- wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+- tar xf lcov_1.11.orig.tar.gz
+- sudo make -C lcov-1.11/ install
+- gem install coveralls-lcov
 - wget https://github.com/buserror/simavr/archive/v1.5.tar.gz
 - tar -xzvf v1.5.tar.gz
 - pushd simavr-1.5 && make && sudo make install RELEASE=1 V=1 && popd
 - sudo ldconfig
 
-script: make 
+before-script:
+- lcov --directory . --zerocounters
+
+script: 
+- make coverage
+
+after_success:
+- lcov --directory . --capture --output-file coverage.info # capture coverage info
+- lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info # filter out system and test code
+- lcov --list coverage.info # debug before upload
+- coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage.info # uploads to coveralls
+
