--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,6 @@ before_install:
 - sudo apt-get install -qq libelf-dev gcc-avr avr-libc freeglut3-dev
 
 install:
-- wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
-- tar xf lcov_1.11.orig.tar.gz
-- sudo make -C lcov-1.11/ install
 - gem install coveralls-lcov
 - wget https://github.com/buserror/simavr/archive/v1.5.tar.gz
 - tar -xzvf v1.5.tar.gz
@@ -19,6 +16,7 @@ before-script:
 
 script: 
 - make coverage
+- cd test ; ./build
 
 after_success:
 - lcov --directory . --capture --output-file coverage.info # capture coverage info
