--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: c
 
 before_install:
 - sudo apt-get update -qq
-- sudo apt-get install -qq libelf-dev gcc-avr avr-libc freeglut3-dev
+- sudo apt-get install -qq libelf-dev gcc-avr avr-libc freeglut3-dev lcov
 
 install:
 - gem install coveralls-lcov
