--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ before_install:
 - sudo apt-get install -qq libelf-dev gcc-avr avr-libc freeglut3-dev lcov
 
 install:
+- wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+- tar xf lcov_1.11.orig.tar.gz
+- sudo make -C lcov-1.11/ install
 - gem install coveralls-lcov
 - wget https://github.com/buserror/simavr/archive/v1.5.tar.gz
 - tar -xzvf v1.5.tar.gz
