--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 
 after_success:
 - lcov --directory . --capture --output-file coverage.info # capture coverage info
-- lcov --remove coverage.info 'test/*' --output-file coverage.info # filter out system and test code
+- lcov --remove coverage.info 'test/*' '/usr/*' --output-file coverage.info # filter out system and test code
 - lcov --list coverage.info # debug before upload
 - coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage.info # uploads to coveralls
 
