add basic mocking so that testing can be extended.

--- a/test/makefile
+++ b/test/makefile
@@ -1,7 +1,7 @@
 
 MAIN=main
 PRJSRC=$(wildcard test_*.c)
-LIBS=-lrt -lm -lGL -lGLU -lglut -lelf -lsimavr -lpthread -ldl
+LIBS=-lrt -lm -lGL -lGLU -lglut mocks/elf.a mocks/simavr.a -lpthread -ldl
 CC=gcc
 CLIBSBUILD?=
 CFLAGSBUILD?=-O2 
@@ -20,11 +20,15 @@ all: test
 test: build
 	$(RUN)
 
-build: ${OBJ} ${MAIN}.o
+build: mock ${OBJ} ${MAIN}.o
 	$(CC) ${OBJ} ${OBJECT_UNDER_TEST} ${LIBS} ${CLIBSBUILD} -o $@
 
 %.o: %.c
 	$(CC) ${CFLAGS} -o $@ $<
 
+mock:
+	make -C mocks
+
 clean:
+	make -C mocks clean
 	rm -f build ${MAIN} *.o *.gcda *.gcno
