--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before-script:
 
 script: 
 - make coverage
-- ./test/build
+- cd test ; ./build
 
 after_success:
 - lcov --directory . --capture --output-file coverage.info # capture coverage info
