--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,19 @@ install:
 before-script:
 - lcov --directory . --zerocounters
 
+addons:
+  sonarqube:
+    organization: "waynebooth-github"
+
 script: 
-- make coverage
+- build-wrapper-linux-x86-64 --out-dir bw-output make clean all
+- make clean coverage
 - cd test ; ./build && cd ../
+- sonar-scanner
+
+cache:
+  directories:
+    - '$HOME/.sonar/cache'
 
 after_success:
 - lcov --directory . --capture --output-file coverage.info # capture coverage info
