--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,11 @@ before-script:
 - lcov --directory . --zerocounters
 
 addons:
-  sonarqube:
+  sonarcloud:
     organization: "waynebooth-github"
 
 script: 
-- build-wrapper-linux-x86-64 --out-dir bw-output make clean all
-- make clean coverage
+- build-wrapper-linux-x86-64 --out-dir bw-output make clean coverage
 - cd test ; ./build && cd ../
 - sonar-scanner
 
