--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ addons:
 script: 
 - build-wrapper-linux-x86-64 --out-dir bw-output make clean coverage
 - cd test ; ./build && cd ../
-- sonar-scanner -Dsonar.login=$SONAR_TOKEN
+- sonar-scanner      -Dsonar.projectKey=your_project_key_that_must_be_unique     -Dsonar.sources=.     -Dsonar.cfamily.build-wrapper-output=bw-output     -Dsonar.host.url=https://sonarcloud.io     -Dsonar.organization=waynebooth-github   -Dsonar.login=$SONAR_TOKEN
 
 cache:
   directories:
