--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,12 @@ before-script:
 addons:
   sonarcloud:
     organization: "waynebooth-github"
+    token: $SONAR_TOKEN
 
 script: 
 - build-wrapper-linux-x86-64 --out-dir bw-output make clean coverage
 - cd test ; ./build && cd ../
-- sonar-scanner      -Dsonar.projectKey=your_project_key_that_must_be_unique     -Dsonar.sources=.     -Dsonar.cfamily.build-wrapper-output=bw-output     -Dsonar.host.url=https://sonarcloud.io     -Dsonar.organization=waynebooth-github   -Dsonar.login=$SONAR_TOKEN
+- sonar-scanner
 
 cache:
   directories:
