--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
 sonar.sources=./src
-sonar.tests=./tests
+sonar.tests=./test
  
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
