--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,3 +13,4 @@ sonar.tests=./test
 sonar.sourceEncoding=UTF-8
 
 sonar.cfamily.build-wrapper-output=bw-output
+sonar.cfamily.gcov.reportsPath=./src
