Ignore testing log file. Reorder the git ignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,21 @@
-coverage.info
 bw-output
-src/*.d
-src/*.gcda
-src/*.gcno
-src/*.o
+coverage.info
 src/app
 src/cores/*.d
 src/cores/*.gcda
 src/cores/*.gcno
 src/cores/*.so
+src/*.d
+src/*.gcda
+src/*.gcno
+src/*.o
 test/build
 test/cores
-test/test.log
 test/*.gcda
 test/*.gcno
-test/*.o
 test/mocks/*.a
 test/mocks/*.gcda
 test/mocks/*.gcno
+test/*.o
+test/testing.log
+test/test.log
