Fix tests after the change of referencing ports from char * to char. Refactor log capture in tests so it can be used in other places Slowly re-introduce "button_ac" again

--- a/test/makefile
+++ b/test/makefile
@@ -7,7 +7,7 @@ CLIBSBUILD?=
 CFLAGSBUILD?=-O2 
 CFLAGS=-c -Wall -I. -I/usr/local/include/simavr/ -g
 CFLAGS+=${CFLAGSBUILD}
-OBJ=$(PRJSRC:.c=.o) main.o
+OBJ=$(PRJSRC:.c=.o) main.o utils.o
 OBJECT_UNDER_TEST=$(PRJSRC:test_%.c=../src/%.o)
 ifneq ($(CLIBSBUILD),-lgcov)
 	RUN=./build
