--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ jdk:
 
 before_install:
 - sudo apt-get update -qq
-- sudo apt-get install -qq libelf-dev gcc-avr avr-libc freeglut3-dev lcov
+- sudo apt-get install -qq libelf-dev gcc-avr avr-libc freeglut3-dev lcov valgrind
 
 install:
 - gem install coveralls-lcov
@@ -26,7 +26,7 @@ addons:
 
 script: 
 - build-wrapper-linux-x86-64 --out-dir bw-output make clean coverage
-- cd test ; ./build && cd ../
+- cd test ; valgrind ./build && cd ../
 - find ./src -name *.c | xargs -I {} sh -c 'export T_DIR=$(dirname {}) && export T_FILE=$(basename {}) && cd $T_DIR && gcov -cbf $T_FILE -o . '
 - sonar-scanner
 
