Allow the build directory to be in a different location to the firmware build Add the an example project

--- a/src/makefile
+++ b/src/makefile
@@ -4,9 +4,9 @@ PRJSRC=$(wildcard *.c)
 LIBS=-lm -lGL -lGLU -lglut -lelf -lsimavr -lpthread -ldl
 
 #######################################
-
-FIRMWARENAME:=$(shell grep -i '^PROJECTNAME=' ../makefile | sed -e 's/PROJECTNAME=//')
-FIRMWAREMCU:=$(shell grep -i '^MCU=' ../makefile | sed -e 's/MCU=//')
+FIRMWAREDIR?=$(shell realpath -s ${CURDIR}/.. )
+FIRMWARENAME:=$(shell grep -i '^PROJECTNAME=' ${FIRMWAREDIR}/makefile | sed -e 's/PROJECTNAME=//')
+FIRMWAREMCU:=$(shell grep -i '^MCU=' ${FIRMWAREDIR}/makefile | sed -e 's/MCU=//')
 
 CC=gcc
 CLIBSBUILD?= 
@@ -15,6 +15,7 @@ CFLAGS=-c -Wall -Wunreachable-code -I. -I/usr/local/include/simavr/ -g
 CFLAGS+=${CFLAGSBUILD}
 CFLAGS+=-DFIRMWARENAME=${FIRMWARENAME}
 CFLAGS+=-DFIRMWAREMCU="${FIRMWAREMCU}"
+CFLAGS+=-DFIRMWAREDIR=${FIRMWAREDIR}
 OBJ=$(PRJSRC:.c=.o)
 
 -include $(OBJS:.o=.d)
@@ -25,6 +26,14 @@ all: build
 build: ${PROJECTNAME}
 
 %.o: %.c
+ifndef FIRMWARENAME
+	@echo "######################################################################\n\n   \
+	Could not determine the firmware to build against.\n   \
+	Make sure the gsimavr src is in a (non symlinked) directory, parented by your firmware.\n   \
+	Or, provide the "FIRMWAREDIR=/path/to/firmware" parameter to the make command.\n\n\
+	######################################################################"
+	exit 1
+endif
 	$(CC) ${CFLAGS} -o $@ $<
 	$(CC) -MM $(CFLAGS) $*.c > $*.d
 
