Fix the way irqs are generated handled.

--- a/example/makefile
+++ b/example/makefile
@@ -65,9 +65,9 @@
 # Name of target controller 
 # (e.g. 'at90s8515', see the available avr-gcc mmcu 
 # options for possible values)
-#MCU=attiny13
+MCU=attiny13
 #MCU=attiny2313
-MCU=atmega328p
+#MCU=atmega328p
 
 # id to use with programmer
 # default: PROGRAMMER_MCU=$(MCU)
